--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,10 @@
+:root {
+    --roxo: #a200cb;
+    --grafite: #707070;
+    --laranja: #ffbd19;
+    --verde: #14cc8a;
+}
+
 *{
     margin: 0;
     padding: 0;
@@ -88,12 +95,13 @@ main {
     width: 1200px;
     margin: auto;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
 }
 
 .esquerdo {
     /* background-color: white; */
     /* height: 800px; */
+    width: 45%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -106,10 +114,33 @@ main {
 
 .direito {
     /* background-color: white; */
+    width: 45%;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    justify-content: space-around;
+    align-items: flex-start;
     flex-direction: column;
+}
+
+.direito .nomeProduto {
+    font-size: 2.0em;
+    font-weight: bold;
+    color: var(--grafite);
+}
+
+.direito .precoProduto {
+    font-size: 1.8em;
+    font-weight: bold;
+    color: var(--verde);    
+}
+
+.botoes {
+    width: 500px;
+}
+
+.botoes a {
+    padding: 5% 15%;
+    margin: 5% 5%;
+    background-color: var(--roxo);
 }
 
 .outrosProdutos {
