--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,8 @@ header{
     display: flex;
     justify-content: center;
 }
+
+204
 .ca{
     display: flex;
     justify-content: space-between;
@@ -161,49 +163,3 @@ main {
 }
 
 /* home */
-
-.cnjt {
-    display: flex;
-    justify-content: space-between;
-
-}
-
-.cnjt p {
-    width: 570px;
-    height: 250px;
-}
-
-.cnjt h3 {
-    padding: 0px 0px 50px;
-}
-
-.cnjt p{
-    text-align: justify;
-    align-items: center;
-}
-.meio-home {
-    position: relative;
-    bottom: 200px;
-    display: flex;
-    justify-content: center;
-}
-
-.whitebox {
-    border-radius: 5px;
-    width: 1160px;
-    height: 350px;
-    background-color: white;
-    padding: 20px
-}
-
-.banner-home {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url(../img/img4.png);
-    height: 300px;
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-
-.img-1 {
-    width: 570px;
-    border-radius: 5px;
-}
