--- a/css/perfil.css
+++ b/css/perfil.css
@@ -16,7 +16,7 @@ header {
     align-content: center;
     background-color: #A200CB;
 }
-.container img {
+.container img { /* logo */
     height: 95px;
     width: 204px;
 }
@@ -88,26 +88,22 @@ footer {
     align-items: center;
     justify-content: center;
 }
-/* perfil */
-
-
+/* --------------------------------------------------perfil----------------------------------------------------------- */
 body {
     background-color: #EBEBEB;
+    text-align: center;
 }
-
 main {
     margin: auto;
     width: 1200px;
     background-color: white;
     padding: 20px;
 }
-
 .cima {
     width: 1200px;
     display: flex;
     border-bottom: solid 3px #A200CB;
 }
-
 .direito {
     display: flex;
     justify-content: space-between;
@@ -118,41 +114,34 @@ main {
     padding-top: 80px;
     padding-bottom: 20px;
 }
-
 body h1 {
     text-align: center;
     color: #707070;
     padding: 20px;
 }
-
 .esquerdo img {
     width: 250px;
 }
-
 .texto1 {
     font-size: 20px;
 }
-
 .baixo h2 {
     display: flex;
     justify-content: center;
     font-size: 30px;
 }
-
 .baixo p {
     display: flex;
     justify-content: center;
     font-size: 30px;
     padding-top: 30px;
 }
-
 .conteudo {
     display: flex;
     justify-content: space-around;
     width: 1200px;
     margin: auto;
 }
-
 .baixo {
     margin: auto;
     align-items: center;
@@ -160,7 +149,6 @@ body h1 {
     display: flex;
     justify-content: center;
 }
-
 .posranking {
     border: 1px solid black;
     padding: 10px;
@@ -168,15 +156,12 @@ body h1 {
     display: flex;
     justify-content: center;
 }
-
 .t1 {
     text-align: justify;
 }
-
 .t2 {
     text-align: justify;
 }
-
 .esquerdo {
     width: 50%;
     display: flex;
@@ -184,8 +169,96 @@ body h1 {
     align-content: center;
     align-items: center;
 }
-
 h2 {
     text-align: center;
     padding: 20px;
+}
+/* media queries */
+
+@media (max-width: 1169px) {
+    header{
+        background-color: var(--verde);
+    }
+    .container{
+        width: 900px;
+    }
+    .container input {
+        width: 505px;
+        height: 35px;
+        margin-left: 40px;
+    }
+    .menu{
+        width: 500px;
+    }
+    .container img { /* logo */
+        height: 75px;
+        width: 164px;
+    }
+    #entrar {
+        width: 25px;
+        height: 30px;
+        margin: 10px;
+    }
+    .esquerdo img {
+        width: 200px;
+    }
+    .posranking {
+        width: 150px;
+    }
+}
+
+@media (max-width: 767px) {
+    header{
+        background-color: var(--laranja);
+        margin: auto;
+    }
+    .container input {
+        display: none;
+    }
+    .menu-centro {
+        flex-direction: column;
+        width: 150px;
+        padding: 15px 0px;
+        margin: auto;
+    }
+    .menu-centro li {
+        padding-top: 10px;
+    }
+    .container img { /* logo */
+        height: 75px;
+        width: 164px;
+    }
+    .container{
+        width: 700px;
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        align-content: center;
+        margin: auto;
+    }
+    #entrar {
+        display: none;
+    }
+    main{
+        width: 700px;
+        margin: auto;
+        text-align: center;
+    }
+    .botao-login p{
+        display: none;
+    }
+    .conteudo {
+        width: 700px;
+    }
+    .ca {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        align-content: center;
+        font-family: 'Segoe UI';
+        margin: auto;
+    }
+    #avatar{
+        margin: auto;  
+    }    
 }
