--- a/css/qmsomos.css
+++ b/css/qmsomos.css
@@ -1,6 +1,6 @@
 
 /* css cabeçalho e rodapé */
-/* css ranking */
+/* css  quem somos */
 :root {
     --roxo: #a200cb;
     --grafite: #707070;
@@ -91,77 +91,4 @@ footer {
     align-items: center;
     justify-content: center;
 }
-/* ------------------------------------------------------------------------------------------------- */
-/* css página do ranking */
-* {
-    margin: 0;
-    padding: 0;
-}
-td {
-    padding: 0px 45px;
-    margin: auto;
-    text-align: center;
-}
-table {
-    margin: auto;
-    border-spacing: 15px;
-}
-.div {
-    width: 1200px;
-    display: flex;
-    justify-content: space-between;
-    margin: auto;
-    padding-top: 40px;
-}
-.descricao {
-    width: 47%;
-    text-align: justify;
-    border: solid 2px var(--roxo);
-    border-radius: 5px;
-    height: 300px;
-    background-color: white;
-}
-.ranking {
-    width: 47%;
-    border: solid 2px var(--roxo);
-    border-radius: 5px;
-    background-color: white;
-}
-p {
-    width: 400px;
-    margin: auto;
-    padding-top: 20px;
-}
-h3 {
-    text-align: center;
-    padding: 20px;
-    border-bottom: solid 2px var(--roxo);
-    color: var(--roxo);
-    text-transform: uppercase;
-}
-main {
-    background-image: url(../img/arrumado.png);
-    background-repeat: no-repeat;
-    background-position: top center;
-    background-size: cover;
-    padding-bottom: 40px;
-}
-.a-botao {
-    color: var(--roxo);
-    border: solid 2px var(--roxo);
-    padding: 20px;
-    background-color: white;
-    text-align: center;
-    text-decoration: none;
-    text-transform: uppercase;
-}
-.a-botao:hover {
-    background-color: var(--roxo);
-    color: white;
-}
-.botao {
-    width: 1000px;
-    margin: auto;
-    display: flex;
-    justify-content: flex-end;
-}
+/* main quem somos */
