--- a/css/filtroProdutos.css
+++ b/css/filtroProdutos.css
@@ -6,8 +6,9 @@
 }
 
 * {
-    margin: 0;
-    padding: 0;
+    margin: 0%;
+    padding: 0%;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 header {
@@ -17,35 +18,42 @@ header {
     align-content: center;
     background-color: #A200CB;
 }
-
-.container img {
-    height: 95px;
-    width: 204px;
-}
-
 .container {
     width: 1200px;
     margin: auto;
 }
-
-.container input {
+.container img { /* logo */
+    height: 95px;
+    width: 204px;
+}
+.botao-login { /* Avatar + Entrar - btn login */
+    display: flex;
+    justify-content: flex-start;
+    width: 204px;
+}
+.botao-login p { /* Entrar -  btn login */
+    margin-top: -4px;
+}
+#entrar { /* avatar do usuário - btn login */
+    width: 30px;
+    height: 35px;
+    margin: 10px;
+}
+.container input { /* BARRA DE PESQUISA */
     width: 605px;
     height: 35px;
-    margin-left: -120px;
 }
-
 .menu-centro {
     display: flex;
     justify-content: center;
 }
-
 .ca {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: 'Segoe UI';
+    padding: 0px 25px;
 }
-
 .ca a {
     text-decoration: none;
     color: white;
@@ -53,18 +61,6 @@ header {
     justify-content: center;
     align-items: center;
 }
-
-.botao-login {
-    display: flex;
-    justify-content: flex-end;
-}
-
-#entrar {
-    width: 30px;
-    height: 35px;
-    margin: 10px;
-}
-
 .menu {
     list-style: none;
     display: flex;
@@ -73,19 +69,21 @@ header {
     align-items: center;
     font-size: 12px;
 }
-
 .menu a {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     text-decoration: none;
     text-transform: uppercase;
     color: white;
 }
-
+.menu a:hover {
+    border-bottom: 1.5px solid white;
+    transition: 0.3s;
+}
 footer {
     background-image: linear-gradient(to right, rgb(162, 0, 203), rgb(20, 204, 138));
     color: white;
     font-size: 18px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: 'Segoe UI';
     text-align: center;
     height: 100px;
     display: flex;
@@ -93,13 +91,144 @@ footer {
     justify-content: center;
 }
 
+.btn-menu, .btn-close {
+    display: none;
+}
+/* celular */
+@media (max-width: 768px) {
+    /* header */
+    header {
+        background-color: var(--laranja);
+    }
+    .menu {
+        display: none;
+        width: 100%;
+        height: 100%;
+        position: fixed;
+        background-color: rgba(0, 0, 0, 0.9);
+        top: 0;
+        left: 0;
+    }
+    .container input {
+        display: none;
+    }
+    .menu-centro {
+        flex-direction: column;
+        padding: 15px 0px;
+        margin: auto;
+        text-align: center;
+    }
+    .menu-centro li {
+        padding-top: 10px;
+        padding: 20px 0px;
+    }
+    .container img {
+        /* logo */
+        height: 75px;
+        width: 164px;
+        padding-top: 20px;
+    }
+    .container {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        align-content: center;
+        flex-wrap: wrap;
+        margin: auto;
+    }
+    #entrar {
+        display: none;
+    }
+    .botao-login p {
+        display: none;
+    }
+    .ca {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        align-content: center;
+        font-family: 'Segoe UI';
+        margin: auto;
+    }
+    /* Botões do menu */
+    .btn-close {
+        font-size: 1.5em;
+        color: #FFF;
+        float: left;
+        cursor: pointer;
+        z-index: 1;
+        position: absolute;
+        right: 10px;
+        top: 0px;
+    }
+
+    .btn-menu {
+        display: block;
+        width: 56px;
+        height: 56px;
+        margin: auto;
+        text-align: center;
+        color: #FFF;
+        border-radius: 56px;
+        cursor: pointer;
+        background: linear-gradient(to right, rgb(162, 0, 203), rgb(20, 204, 138));
+    }
+    /* main */
+    /* Fim do main, o footer não precisa */
+}
+/* não sei, mas é menor, vai diminuindo e alinhando os elementos */
+@media (max-width: 1024px) {
+    header {
+        background-color: var(--verde);
+        height: 110px;
+    }
+    .menu {
+        width: 406px;
+    }
+    .menu-centro li {
+        padding-top: 2px;
+    }
+    .container img {
+        /* logo */
+        height: 55px;
+        width: 124px;
+        padding-top: 20px;
+    }
+    .container input{
+        width:  406px;
+        height: 25px;
+        margin-top: 30px;
+    }
+    .botao-login p{
+        margin-top: 30px;
+    }
+    .botao-login{
+        width: 124px;
+    }
+    .container {
+        width: 100vw;
+        padding: 0px 20px;
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        align-content: center;
+        flex-wrap: wrap;
+        margin: auto;
+    }
+    .ca{
+        width: 800px;
+    }
+}
+
+
 /* paginaProduto */
 /* Verificar .container  */
 main {
     background-color: #ebebeb;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    padding-top: 50px;
-    padding-bottom: 50px;
+    /* padding-top: 50px; */
+    /* padding-bottom: 50px; */
 }
 
 .produto {
@@ -290,10 +419,13 @@ main {
 
 /* filtroProdutos */
 
+.cont {
+    padding: 3% 0%;
+}
+
 .containerProdutos {
     background-color: #fff;
     border-radius: 5px;
-    /* border: solid 1px black; */
     box-shadow: 4px 4px 15px #cccccc;
 }
 
@@ -307,11 +439,16 @@ main {
 }
 
 .filtros {
-    background-color: var(--roxo);
     color: white;
     padding: 3% 0%;
     display: block;
     padding-left: 2%;
+
+    background-position: top center;
+    background-attachment: fixed;
+    background-image: linear-gradient(rgba(162, 0, 203, 0.6), rgba(162, 0, 203, 0.6)), url(../img/img4.png);
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .filtros h2 {
@@ -333,6 +470,12 @@ main {
     color: white;
     background-color: var(--laranja);
     border: none;
+    text-transform: uppercase;
+    font-weight: 600;
+}
+
+.btnAplicarFiltros:hover {
+    cursor: pointer;
 }
 
 .innerFiltros {
@@ -361,13 +504,8 @@ main {
     margin-right: 2%;
 }
 
-.categoria {
-    margin-bottom: 5%;
-}
-
 .categorias {
     width: 100%;
-    /* border: solid 1px black; */
 }
 
 .categoria h2 {
@@ -409,13 +547,12 @@ main {
 }
 
 .imgCardProduto:hover + .englobados{
+    transition: 0.3s;      
     display: block;
-    transition: linear;      
 }
 
 .englobados:hover {
     display: block;
-
 }
 
 .imgCardProduto img {
