--- a/css/final.css
+++ b/css/final.css
@@ -723,7 +723,7 @@ header {
 
 
 .container {
-    width: 1170px;
+    width: 1200px;
     margin: auto;
 }
 .container img { /* logo */
@@ -962,6 +962,21 @@ footer {
         padding-top: 0;
     }
 
+    /* paginaProduto */
+    .paginaProduto_pag .produto {
+        flex-direction: column;
+        align-items: center;
+    }
+    .paginaProduto_pag .esquerdo {
+        width: 65%;
+    }
+    .paginaProduto_pag .direito {
+        width: 66%;
+    }
+    .paginaProduto_pag .produto {
+        padding-bottom: 5%;
+    }
+
 }
 /* não sei, mas é menor, vai diminuindo e alinhando os elementos */
 @media (max-width: 1169px) {
@@ -1029,6 +1044,13 @@ footer {
         width: 100%;
         padding-top: 0;
     }
+
+    /* pagina Produto */
+    .paginaProduto_pag .direito .nomeProduto {
+        font-size: 1.5em;
+        font-weight: bold;
+        color: var(--grafite);
+    }
 }
 
 
@@ -1043,34 +1065,33 @@ main {
 
 .paginaProduto_pag .produto {
     background-color: #fff;
-    width: 1200px;
+    width: 100%;
     margin: auto;
     display: flex;
     justify-content: space-around;
 }
 
 .paginaProduto_pag .esquerdo {
-    /* background-color: white; */
-    /* height: 800px; */
-    width: 30%;
     display: flex;
     justify-content: center;
     align-items: center;
+    margin: 2% 0%;
 }
 
 .paginaProduto_pag .esquerdo .imagem-produto {
-    width: 450px;
-    height: 450px;
+    width: 100%;
+    height: 100%;
     margin: 10% 0;
+    padding-top: 0;
 }
 
 .paginaProduto_pag .direito {
     /* background-color: white; */
-    width: 45%;
     display: flex;
     justify-content: space-around;
     align-items: flex-start;
     flex-direction: column;
+    margin: 2% 0%;
 }
 
 .paginaProduto_pag .direito .nomeProduto {
@@ -1106,6 +1127,7 @@ main {
     height: 30px;
     width: 44%;
     font-size: 0.8em;
+    margin-top: 2%;
 }
 
 .paginaProduto_pag .botoes {
@@ -1134,7 +1156,7 @@ main {
 
 .paginaProduto_pag .outrosProdutos {
     background-color: #fff;
-    width: 1200px;
+    width: 100%;
     margin: auto;
     margin-top: 50px;
 }
@@ -1510,9 +1532,12 @@ main {
     .englobados:hover {
         display: block;
     }
+
+    /* pagina Produto */
+    
 }
 
-@media (min-width: 768px) {
+@media (min-width: 767px) {
     .divSelects {
         width: 50%;
         display: flex;
@@ -1534,6 +1559,12 @@ main {
         grid-template-columns: 35% auto 35%;
         grid-template-rows: 50% 50%;
         grid-gap: 10px;    
+    }
+    .paginaProduto_pag .esquerdo {
+        width: 35%;    
+    }
+    .paginaProduto_pag .direito {
+        width: 35%;
     }
 }
 
